<resources>

    <!-- do not translate section -->

    <!--common string resources-->
    <string name="app_name">YonClick</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="no_network_msg">No internet connectivity!</string>
    <string name="setting">Setting</string>
    <string name="login">LOG IN</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="search_hint_product">Type name, price</string>
    <string name="empty_list_msg">No data found!</string>

    <string name="msg_loading">Loading, please wait...</string>
    <string name="info">Info</string>
    <string name="next">Next</string>
    <string name="close">Close</string>

    <!--Drawer menu string resources-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_account">My Account</string>
    <string name="menu_products">All Product</string>
    <string name="menu_payment">Payment Setup</string>
    <string name="menu_my_address">Address</string>
    <string name="menu_cart">Cart List</string>
    <string name="menu_wish">Wish List</string>
    <string name="menu_order">Orders</string>
    <string name="menu_coupon">Coupons</string>
    <string name="menu_support">Support</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_setting">Settings</string>

    <!--Home page-->
    <string name="see_all">Voir plus</string>
    <!--Login page-->
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="skip">SKIP</string>

    <!--Product list heading-->
    <string name="list_featured">Featured items</string>
    <string name="list_recent">Recent items</string>

    <!--Product details-->
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="total_review">(Total review \u0020</string>

    <!--Order-->
    <string name="order_id">Order ID :\u0020</string>
    <string name="order_list">Order List</string>
    <string name="order_details">Order details</string>
    <string name="total_price">Total price :\u0020</string>
    <string name="status">Status :\u0020</string>

    <!--Coupon-->
    <string name="coupon_code">Coupon Code :\u0020</string>
    <string name="coupon_list">Coupon List</string>
    <string name="coupon_details">Coupon details</string>
    <string name="amount">Amount :\u0020</string>
    <string name="expire_date">Expire Date :\u0020</string>

    <!--Payment setup -checkout/delivery-->

    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="billing_address">Billing Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="user_name">User name</string>
    <string name="address">Address*</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_postal">Zip/Postal</string>
    <string name="country">Country</string>
    <string name="telephone">Telephone</string>
    <string name="password_delivery">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ship_to_address">Ship to this address</string>

    <string name="shipping_address">Shipping Address</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="office_delivery">Pickup from warehouse</string>
    <string name="proceed">Proceed</string>


    <string name="select_payment_method">Select Payment Method</string>
    <string name="cash_payment">Cash on Delivery</string>
    <string name="card_payment">Credit card</string>
    <string name="password_reg">Password* (min 6 character)</string>
    <string name="place_order">Place Order</string>

    <!--Cart List-->
    <string name="buy">Buy</string>
    <string name="profil">Profil</string>
    <string name="cart_list">Cart List</string>
    <string name="plat_list">Liste plat</string>
    <string name="price_cart">Price :\u0020</string>
    <string name="quantity">Quantity :\u0020</string>
    <string name="pin">  Choisissez votre pin</string>


    <!--Confirmation Dialog-->
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_yes">YES</string>
    <string name="dialog_btn_no">NO</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="delete_wish_item">Do you want to delete this item from wish list?</string>
    <string name="delete_cart_item">Do you want to delete this item from cart list?</string>
    <string name="cancel_order_item">Do you want to cancel this order?</string>

    <!--search / advance search-->
    <string name="search_anything">Search anything</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="orders">Orders</string>
    <string name="size_attribute">Size/Attribute</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="to">to</string>
    <string name="order_by">Order by</string>
    <string name="select_order">Select order</string>

    <!-- Settings activity -->
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summary">Turn on/off notification</string>

    <!--Notification-->
    <string name="notifications">Notifications</string>
    <string name="notification_details">Notification details</string>
    <string name="placeholder">Internet</string>
    <string name="abonnement">Abonnement</string>
    <string name="carte">Carte de credit</string>
    <string name="empty_result">No data!</string>

    <string name="nouveau">Nouveautés</string>
    <string name="meilleure">Magasins</string>
    <string name="produit">Produits</string>
    <string name="brand">Marques</string>
    <string name="magasin">Magasins</string>

    <!-- Support link url -->
    <string name="support">Support</string>
    <string name="support_link">http://mcc.com.bd/</string>

    <string name="select_attribute">Please select product attribute.</string>


    <!-- woo commerce payment methods -->

    <string name="title_bank">Direct bank transfer</string>

    <string name="title_check">Check payments</string>

    <string name="title_cash_on_delivery">Cash on delivery</string>

    <string name="title_stripe">Credit Card (Stripe)</string>

    <string name="transaction_id">Transaction ID</string>
    <string name="order_successful_message">Your order has been successfully placed and is being verified. Thank you for purchasing from us.</string>
    <string name="order_contact_message">If needed contact with us here: +88017XX XXX XXX</string>
    <string name="order_successful">Order successful</string>
    <string name="order_failed">Order failed!</string>
    <string name="finalize_order">Finalize order</string>

    <string name="failed">Failed</string>
    <string name="no_internet">No internet!</string>
    <string name="connect">Connect</string>
    <string name="share_text">Install best shopping application from:</string>
    <string name="already_in_cart">Product already in cart list.</string>
    <string name="added_to_cart">Added to cart</string>

    <string name="type_something">Type something to search</string>
    <string name="no_notification">No notification</string>

    <string name="rate">Rate App</string>
    <string name="share">Share</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="messenger">Messenger</string>
    <string name="others">Others</string>
    <string name="email_support">Email</string>

    <string name="install_messenger">Install facebook messenger</string>
    <string name="permission_not_granted">Permission not granted!</string>

    <string name="change_representation">Change Representation</string>

    <string name="all">All</string>
    <string name="select_category">Select Category</string>
    <string name="please_sign_in">PLEASE SIGN IN WITH</string>
    <string name="facebook_cap">FACEBOOK</string>
    <string name="sign_out">Sign Out</string>
    <string name="google_cap">GOOGLE</string>
    <string name="email_cap">EMAIL</string>
    <string name="or">OR</string>
    <string name="register_to_show_order">Sign in to see your order list</string>
    <string name="select_all">Select All</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="empty_wish_list">Your wish list is empty</string>
    <string name="empty">Empty</string>

    <string name="total_orders">Total Orders</string>
    <string name="reviews">Reviews</string>
    <string name="no_comment">No comment</string>
    <string name="comments">Comments</string>

    <string name="terms">Terms and Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="inscription">Inscription</string>
    <string name="connexion">Connexion</string>
    <string name="nom_d_utilisateur">Nom complet</string>
    <string name="creer_un_compte">Creer un compte</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="mot_de_passe_oubli">Mot de passe oublie?</string>
    <string name="se_connecter">Se connecter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pinText">Entrez un PIN à 4 chiffres. Ce PIN vous sera
demandé  lorsque vous effecturez une transaction à partir
 de votre numéro de téléphone sur cette application</string>


</resources>
